--- a/about.html
+++ b/about.html
@@ -20,9 +20,80 @@
             <button class="lightBlueButton">Contact Us</button>
         </nav>
     </div>
-    <main>
-       <h2>What is Investing</h2> 
+    <main id="investingPageRap">
+        <div id="videoSection">
+            <h2 id="investingTitle">What is Investing</h2> 
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Sbp_t4guM8g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div >
+            <h3>What are ETFs and Index Funds?</h3>
+            <div class="choiceBlock" onclick="">
+                <img src="/resources/gold round.png" alt="gold bars">
+                <h4>ETF</h4>
+            </div>
+            <div class="choiceBlock" onclick="">
+                <img src="/resources/coins-round.png" alt="coins and dollar bills">
+                <h4>Index Fund</h4>
+            </div>
+
+        </div>
+      
+        <div class="flexContainer" id="appearsOnClickSection">
+            <div class="leftBox">
+                <img src="/resources/gold round.png" alt="gold bars">
+            </div>
+            <div class="rightBox">
+                <h3>ETF</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid possimus esse quasi doloribus libero eum omnis quos ut praesentium quaerat</p>
+                <div class="inlineFlexBox">
+                    <div class="descriptionbox">
+                        <h4>8%</h4>
+                        <p>Average Annueal return</p>
+                    </div>
+                    <div class="descriptionbox">
+                        <h4>20</h4>
+                        <p>Years average investment time</p>
+                    </div>
+                    <div class="descriptionbox">
+                        <h4>$0</h4>
+                        <p>Min amount to start</p>
+                    </div>
+                </div>
+            </div>
+            <button class="lightBlueButton">Search ETFs</button>
+        </div>
+
+        <div class="flexContainer" id="appearsOnClickSection">
+            <div class="leftBox">
+                <h3>Index Fund</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid possimus esse quasi doloribus libero eum omnis quos ut praesentium quaerat</p>
+                <div class="inlineFlexBox">
+                    <div class="descriptionbox">
+                        <h4>8%</h4>
+                        <p>Average Annueal return</p>
+                    </div>
+                    <div class="descriptionbox">
+                        <h4>20</h4>
+                        <p>Years average investment time</p>
+                    </div>
+                    <div class="descriptionbox">
+                        <h4>$0</h4>
+                        <p>Min amount to start</p>
+                    </div>
+                </div>
+            </div>
+            <div class="rightBox">
+                <img src="/resources/gold round.png" alt="gold bars">
+            </div>
+            <button class="lightBlueButton">Search Index Funds</button>
+        </div>
+
+        <div id="sendMessage">
+            <h3>We love hearing from you, <br>Send us your questions</h3>
+            <button class="lightBlueButton" href="#">Send Message</button>
+        </div> 
     </main>
+    
     <footer>
         <div id="bottomLinks">
             <a href="/index.html" id="bottomHome">Home</a>
