Calculator finally working properly

--- a/assetList.html
+++ b/assetList.html
@@ -21,7 +21,7 @@
         </nav>
     </div>
     <main>
-       <h2>Search Assets</h2> 
+       <h2>Search Assets titlr </h2> 
     </main>
     <footer>
         <div id="bottomLinks">
