--- a/calculator.html
+++ b/calculator.html
@@ -45,7 +45,7 @@
             <input type="number" name="rate" class="numberInput" id="rate">
             <div class="formTextBundle">
             <label for="frequency">Compund Frequency</label>
-            <p class="formDescription">Timer per year interest will be compunded</p>
+            <p class="formDescription">Enter 1, 2, 4, 12, or 365</p>
             </div>
             <input type="number" name="frequency" class="numberInput" id="frequency">
             <br>
