AA lot of changes + asset page ready

--- a/assetList.html
+++ b/assetList.html
@@ -17,11 +17,105 @@
             <a href="/assetList.html" class="link">Asset List</a>
             <a href="/calculator.html" class="link">Calculator</a>
             <a href="/blog.html" class="link">Blog</a>
-            <button class="lightBlueButton">Contact Us</button>
+            <button class="lightBlueButton" href="https://open.spotify.com/playlist/3uq1jrrLNf3nbqO9cV4NCK" target="_blank">Contact Us</button>
         </nav>
     </div>
     <main>
-       <h2>Search Assets titlr </h2> 
+        <div id="assetsTopSection">
+            <h2 id="assetsTitle">Search Assets</h2>
+            <p id="filter">Filter by:</p> 
+            <select name="categories" id="categories">
+                <option value="ETFs">ETFs</option>
+                <option value="Index Fund">Index Funds</option>
+            </select>
+        </div>
+       <div id="blogFlex">
+        <div class="assetBlock">
+            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
+            <h5 class="assetBlockTitle">High Dividend Yield</h5>
+            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">ETF</p>
+                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
+            <h5 class="assetBlockTitle">High Dividend Yield</h5>
+            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">ETF</p>
+                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
+            <h5 class="assetBlockTitle">High Dividend Yield</h5>
+            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">ETF</p>
+                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
+            <h5 class="assetBlockTitle">High Dividend Yield</h5>
+            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">ETF</p>
+                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
+            <h5 class="assetBlockTitle">High Dividend Yield</h5>
+            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">ETF</p>
+                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
+            <h5 class="assetBlockTitle">High Dividend Yield</h5>
+            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">ETF</p>
+                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
+            <h5 class="assetBlockTitle">High Dividend Yield</h5>
+            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">ETF</p>
+                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
+            <h5 class="assetBlockTitle">High Dividend Yield</h5>
+            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">ETF</p>
+                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+            </div>
+        </div>
+    </div>
+
+    <div id="sendMessage">
+        <h3>We love hearing from you, <br>Send us your questions</h3>
+        <button class="lightBlueButton" href="#">Send Message</button>
+    </div>  
     </main>
     <footer>
         <div id="bottomLinks">
