--- a/assetList.html
+++ b/assetList.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Asset List</title>
     <script src="/script.js" defer></script>
     <link rel="stylesheet" href="/styles.css">
-    <link rel="rel" href="/resources/favicon1.png" type="image/x-icon">
+    <link rel="icon" href="/resources/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="navOther">
@@ -17,7 +17,7 @@
             <a href="/assetList.html" class="link">Asset List</a>
             <a href="/calculator.html" class="link">Calculator</a>
             <a href="/blog.html" class="link">Blog</a>
-            <button class="lightBlueButton" href="https://open.spotify.com/playlist/3uq1jrrLNf3nbqO9cV4NCK" target="_blank">Contact Us</button>
+            <a href="mailto:mariadelmarvze@gmail.com" target="_blank" class="aButton"><button class="lightBlueButton">Contact Us</button></a>
         </nav>
     </div>
     <main>
@@ -32,89 +32,160 @@
        <div id="blogFlex">
         <div class="assetBlock">
             <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
-            <h5 class="assetBlockTitle">High Dividend Yield</h5>
-            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <h5 class="assetBlockTitle">High Dividend Yield - VYM</h5>
+            <p class="assetDescription">1-yr Annual returns: 14.45%</p>
             <div class="inlineFlex">
                 <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
                 <p class="assetType">ETF</p>
-                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+                <a href="https://investor.vanguard.com/etf/profile/VYM" target="_blank"><button class="lightBlueButton">Details</button></a>
             </div>
         </div>
         <div class="assetBlock">
             <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
-            <h5 class="assetBlockTitle">High Dividend Yield</h5>
-            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <h5 class="assetBlockTitle">Vanguard S&P 500 - VOO</h5>
+            <p class="assetDescription">1-yr Annual returns: 15.59%</p>
             <div class="inlineFlex">
                 <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
                 <p class="assetType">ETF</p>
-                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+                <a href="https://investor.vanguard.com/etf/profile/overview/voo" target="_blank"><button class="lightBlueButton">Details</button></a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/charlesLogo.png" alt="Charles Schwab logo">
+            <h5 class="assetBlockTitle">Schwab U.S. Mid-Cap- SCHM</h5>
+            <p class="assetDescription">1-yr Annual returns: 14.55% PL</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">ETF</p>
+                <a href="https://www.schwabassetmanagement.com/products/schm" target="_blank"><button class="lightBlueButton">Details</button></a>
             </div>
         </div>
         <div class="assetBlock">
             <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
-            <h5 class="assetBlockTitle">High Dividend Yield</h5>
-            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <h5 class="assetBlockTitle">Vanguard Russell 2000 - VTWO</h5>
+            <p class="assetDescription">1-yr Annual returns: -5.81%</p>
             <div class="inlineFlex">
                 <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
                 <p class="assetType">ETF</p>
-                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+                <a href="https://investor.vanguard.com/etf/profile/VTWO" target="_blank"><button class="lightBlueButton">Details</button></a>
             </div>
         </div>
         <div class="assetBlock">
-            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
-            <h5 class="assetBlockTitle">High Dividend Yield</h5>
-            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <img class="logo" src="/resources/charlesLogo.png" alt="Charles Shwab logo">
+            <h5 class="assetBlockTitle">Schwab Int. Equity SCHF</h5>
+            <p class="assetDescription">1-yr Annual returns: 5.83% PL</p>
             <div class="inlineFlex">
                 <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
                 <p class="assetType">ETF</p>
-                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+                <a href="https://www.schwabassetmanagement.com/products/schf" target="_blank"><button class="lightBlueButton">Details</button></a>
             </div>
         </div>
         <div class="assetBlock">
-            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
-            <h5 class="assetBlockTitle">High Dividend Yield</h5>
-            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
-            <div class="inlineFlex">
+            <img class="logo" src="/resources/charlesLogo.png" alt="Charles Shwab logo">
+            <h5 class="assetBlockTitle">Schwab U.S. REIT SCHH</h5>
+            <p class="assetDescription">1-yr Annual returns: 13.94%</p>
+            <div class="inlineFlex" class="etf">
                 <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
                 <p class="assetType">ETF</p>
-                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+                <a href="https://www.schwabassetmanagement.com/products/schh" target="_blank"><button class="lightBlueButton">Details</button></a>
             </div>
         </div>
         <div class="assetBlock">
-            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
-            <h5 class="assetBlockTitle">High Dividend Yield</h5>
-            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <img class="logo" src="/resources/charlesLogo.png" alt="Charles Shwab logo">
+            <h5 class="assetBlockTitle">Schwab U.S. Agg. Bond SCHZ</h5>
+            <p class="assetDescription">1-yr Annual returns: -1.04%</p>
             <div class="inlineFlex">
                 <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
                 <p class="assetType">ETF</p>
-                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+                <a href="https://www.schwabassetmanagement.com/products/schz" target="_blank"><button class="lightBlueButton">Details</button></a>
             </div>
         </div>
         <div class="assetBlock">
-            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
-            <h5 class="assetBlockTitle">High Dividend Yield</h5>
-            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <img class="logo" src="/resources/invesco.png" alt="Invesco logo">
+            <h5 class="assetBlockTitle">Invesco QQQ</h5>
+            <p class="assetDescription">1-yr Annual returns: 14.15%</p>
             <div class="inlineFlex">
                 <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
                 <p class="assetType">ETF</p>
-                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+                <a href="https://investor.vanguard.com/etf/profile/VYM" target="_blank"><button class="lightBlueButton">Details</button></a>
             </div>
         </div>
         <div class="assetBlock">
-            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard V logo">
-            <h5 class="assetBlockTitle">High Dividend Yield</h5>
-            <p class="assetDescription">1-yr Annual returns: 18.89%</p>
+            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard logo">
+            <h5 class="assetBlockTitle">Vanguard Dividend App. VIG</h5>
+            <p class="assetDescription">1-yr Annual returns: 12.48%</p>
             <div class="inlineFlex">
                 <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
                 <p class="assetType">ETF</p>
-                <a href="https://investor.vanguard.com/etf/profile/VYM" class="detailsButton">Details</a>
+                <a href="https://investor.vanguard.com/etf/profile/VIG" target="_blank"><button class="lightBlueButton">Details</button></a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/fidelity.png" alt="Fidelity logo">
+            <h5 class="assetBlockTitle">Fidelity Large Cap FNILX</h5>
+            <p class="assetDescription">1-yr Annual returns: 14.37%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">Index</p>
+                <a href="https://fundresearch.fidelity.com/mutual-funds/summary/315911628" target="_blank"><button class="lightBlueButton">Details</button></a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/charlesLogo.png" alt="Charles Shwab logo">
+            <h5 class="assetBlockTitle">Schwab S&P 500 SWPPX</h5>
+            <p class="assetDescription">1-yr Annual returns: 9.51% PL</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">Index</p>
+                <a href="https://www.schwabassetmanagement.com/products/swppx" target="_blank"><button class="lightBlueButton">Details</button></a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/fidelity.png" alt="Fidelity logo">
+            <h5 class="assetBlockTitle">Fidelity Ex. Market FSMAX</h5>
+            <p class="assetDescription">1-yr Annual returns: -5.42%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">Index</p>
+                <a href="https://fundresearch.fidelity.com/mutual-funds/summary/315911743" target="_blank"><button class="lightBlueButton">Details</button></a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard logo">
+            <h5 class="assetBlockTitle">Vanguard Total Mkt. VTSAX</h5>
+            <p class="assetDescription">1-yr Annual returns: 11.67%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">Index</p>
+                <a href="https://investor.vanguard.com/mutual-funds/profile/vtsax" target="_blank"><button class="lightBlueButton">Details</button></a>
+            </div>
+        </div>
+        <div class="assetBlock">
+            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard logo">
+            <h5 class="assetBlockTitle">Vanguard Growth VIGAX</h5>
+            <p class="assetDescription">1-yr Annual returns: 12.48%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">Index</p>
+                <a href="https://investor.vanguard.com/mutual-funds/profile/VIGAX" target="_blank"><button class="lightBlueButton">Details</button></a>
+            </div>
+        </div>
+       
+        <div class="assetBlock">
+            <img class="logo" src="/resources/voo logo.svg" alt="Vanguard logo">
+            <h5 class="assetBlockTitle">Vanguard Balanced VBIAX</h5>
+            <p class="assetDescription">1-yr Annual returns: 5.33%</p>
+            <div class="inlineFlex">
+                <img src="/resources/Frame.svg" alt="frame blocks image" class="typeFigure">
+                <p class="assetType">Index</p>
+                <a href="https://investor.vanguard.com/mutual-funds/profile/vbiax" target="_blank"><button class="lightBlueButton">Details</button></a>
             </div>
         </div>
     </div>
 
     <div id="sendMessage">
         <h3>We love hearing from you, <br>Send us your questions</h3>
-        <button class="lightBlueButton" href="#">Send Message</button>
+        <a href="mailto:mariadelmarvze@gmail.com" target="_blank" class="aButton"><button class="lightBlueButton">Send Message</button></a>
     </div>  
     </main>
     <footer>
