--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Easy Finance</title>
     <script src="/script.js" defer></script>
     <link rel="stylesheet" href="/styles.css">
-    <link rel="rel" href="/resources/favicon1.png" type="image/x-icon">
+    <link rel="icon" href="/resources/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -18,13 +18,13 @@
             <a href="/assetList.html" class="link">Asset List</a>
             <a href="/calculator.html" class="link">Calculator</a>
             <a href="/blog.html" class="link">Blog</a>
-            <button class="lightBlueButton">Contact Us</button>
+            <a href="mailto:mariadelmarvze@gmail.com" target="_blank" class="aButton"><button class="lightBlueButton">Contact Us</button></a>
         </nav>
         <div class="flexContainer" id="heroSection">
             <div class="leftBox">
                 <h1>Find the best long-term stock investments</h1>
                 <p class="description">Discover the best and more secure ETFs and Index Funds for long term investment.</p>
-                <button class="lightBlueButton">Get Started</button>
+                <a href="/about.html" target="_blank"><button class="lightBlueButton">Learn More</button></a>
             </div>
             <div class="rightBox">
                 <img src="/resources/hero image.png" alt="Computer stock graphs" id="heroImage">
@@ -42,12 +42,12 @@
         </div>
         <div class="flexContainer" id="allocation">
             <div class="leftBox" id="chart">
-                <img src="/resources/mientrasTanto.png" alt="percentagesChart" id="percentagesChart">
+                <img src="/resources/Allocation.png" alt="percentagesChart" id="percentagesChart">
             </div>
             <div class="rightBox" id="allocationRight">
                 <h2 id="allocationTitle">Recommended allocation of assets:</h2>
                 <p  class="description" id="pWhiteBack">Investors recommend to invest a percentage in different types of ETFs and Index fund based on the type of companies they are composed of to minimize risk and increase resturns</p>
-                <button class="lightBlueButton" href="#">Learn More</button>
+                <a href="/about.html" target="_blank"><button class="lightBlueButton">Learn More</button></a>
             </div>
         </div>
         <div id="marketWidget">
@@ -83,7 +83,6 @@
       ]
     ],
     "chartOnly": false,
-
     "width": 1000,
     "height": 400,
     "locale": "en",
@@ -91,7 +90,7 @@
     "gridLineColor": "rgba(240, 243, 250, 0)",
     "fontColor": "rgba(255, 255, 255, 1)",
     "isTransparent": false,
-    "autosize": true,
+    "autosize": false,
     "showVolume": false,
     "scalePosition": "no",
     "scaleMode": "Normal",
@@ -112,22 +111,22 @@
         <h3 id="articles">Articles for you</h3>
         <div class="flexContainer" id="articles">
     <div class="linkBlock">
-        <img src="/resources/coins-round.png" alt="coins" class="blogImage">
+        <img src="/resources/mainb1.png" alt="three women talking, looking at a laptop" class="blogImage">
         <p class="blogName">How to Learn Basic Board Surfing</p>
     </div>
     <div class="linkBlock">
-        <img src="/resources/gold round.png" alt="gold" class="blogImage">
+        <img src="/resources/mainb2.png" alt="laptop screen with stock chart and woman looking at it from behind" class="blogImage">
         <p class="blogName">How to Learn Basic Board Surfing</p>
     </div>
     <div class="linkBlock">
-        <img src="/resources/manPhone.png" alt="man checking stocks in phone" class="blogImage">
+        <img src="/resources/mainb3.png" alt="three men discussing pointing at a board with charts" class="blogImage">
         <p class="blogName">How to Learn Basic Board Surfing</p>
     </div>
    </div>  
 </div>   
     <div id="sendMessage">
         <h3>We love hearing from you, <br>Send us your questions</h3>
-        <button class="lightBlueButton" href="#">Send Message</button>
+        <a href="mailto:mariadelmarvze@gmail.com" target="_blank" class="aButton"><button class="lightBlueButton">Send Message</button></a>
     </div>  
 <footer>
     <div id="bottomLinks">
