--- a/calculator.html
+++ b/calculator.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Calculator</title>
     <script src="/script.js" defer></script>
     <link rel="stylesheet" href="/styles.css">
-    <link rel="rel" href="/resources/favicon1.png" type="image/x-icon">
+    <link rel="icon" href="/resources/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="navOther">
@@ -17,7 +17,7 @@
             <a href="/assetList.html" class="link">Asset List</a>
             <a href="/calculator.html" class="link">Calculator</a>
             <a href="/blog.html" class="link">Blog</a>
-            <button class="lightBlueButton">Contact Us</button>
+            <a href="mailto:mariadelmarvze@gmail.com" target="_blank" class="aButton"><button class="lightBlueButton">Contact Us</button></a>
         </nav>
     </div>
     <main>
